# kms_standalone

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  sqlx-data.json
example/: deployment.yaml  kms.yaml  mysql.yaml  secret.yaml
migrations/: 20211028101339_kms-test.down.sql  20211028101339_kms-test.up.sql  20211031091444_kms-standalone-init.down.sql  20211122091223_kms-standalone-init.down.sql  20211122091223_kms-standalone-init.up.sql
proto/: blockchain.proto  common.proto  kms.proto
src/: account.rs  config.rs  lib.rs  main.rs  proto.rs  server.rs  sm.rs
