[package]
name = "kms"
version = "0.1.0"
edition = "2021"
default-run = "kms"

[dependencies]
sqlx = { version = "0.5.9", features = [ "runtime-tokio-native-tls", "mysql", "offline" ] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
tonic = "0.6"
prost = "0.9"
secrecy = "0.8"
rand = "0.8"
libsm = "0.4.1"
efficient-sm2 = "0.1.5"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
clap = "=3.0.0-beta.5"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-appender = "0.1"
jemallocator-global = "0.3.2"
hex = "0.4.3"
parking_lot = "0.11.2"
rayon = "1.5.1"
indicatif = "0.16.2"
zeroize = "1.4.3"

[build-dependencies]
tonic-build = "0.6"

[profile.release]
lto = true

[[bin]]
name = "kms-bench"
path = "src/bin/kms-bench.rs"
